<resources>
    <string name="app_name">ITパスポート攻略アプリ</string>
    <string name="app_name_short">Iパス攻略</string>
    <string name="exam_name">ITパスポート</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="button_qa">一問一答</string>
    <string name="button_qfield">分野別</string>
    <string name="button_qterm">期間別</string>
    <string name="button_qselect">問題選択</string>
    <string name="button_exam">試験</string>
    <string name="button_weakpoint">ニガテ</string>
    <string name="button_bookmark">ブックマーク</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
